pods/email-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wsb-email
spec:
  ports:
    - name: local
      protocol: TCP
      port: 25
      targetPort: 25
